Renamed and documented module

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name    = UI-Bowdlator-InputFilter
+name    = UI-Bowdlator-Filter
 author  = Ahmad Fatoum <athreef@cpan.org>
 license = Perl_5
 copyright_holder = Ahmad Fatoum
