--- a/dist.ini
+++ b/dist.ini
@@ -6,4 +6,14 @@ copyright_year   = 2016
 
 version = 0.001
 
-[@Basic]
+[@Starter]
+
+[GithubMeta]
+issues = 1
+user   = a3f
+[@Git]
+
+[ReadmeAnyFromPod / ReadmePodInRoot]
+type = pod
+filename = README.pod
+location = root
