Migrating from github://a3f to github://athreef

--- a/dist.ini
+++ b/dist.ini
@@ -4,14 +4,15 @@ license = Perl_5
 copyright_holder = Ahmad Fatoum
 copyright_year   = 2016
 
-version = 0.001
-
 [@Starter]
 
 [GithubMeta]
 issues = 1
-user   = a3f
+user   = athreef
 [@Git]
+[Git::NextVersion]
+[ChangelogFromGit]
+[OurPkgVersion]
 
 [ReadmeAnyFromPod / ReadmePodInRoot]
 type = pod
